full code commit

--- a/Backend/Recyling_Backend/.env
+++ b/Backend/Recyling_Backend/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Shaik@1245
-DB_NAME=Recyling
+DB_PASSWORD=hyderabad
+DB_NAME=recycle
 DB_PORT=3306
 
 SECRET_KEY=raghava
